--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "@imgproxy/imgproxy-node": "^1.0.2",
     "next": "14.0.2",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "react-swipeable": "^7.0.1"
   },
   "devDependencies": {
     "eslint": "^8",
